Commit from Git 2

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,5 @@
 /target/
+/target/classes/META-INF/maven/com.felix/AppiumFormGit/pom.properties
+/.gitignore
+/target/classes/META-INF/maven/com.felix/AppiumFormGit/pom.properties
+/target/classes/META-INF/maven/com.felix/AppiumFormGit/pom.properties
